syntax = "proto3";

package protocol;

import "proto/common.proto";
import "proto/status.proto";

option go_package = "protocol;protocol";

// 批量获取用户信息
message GetUsersReq
{
    int64 role = 1;
    int64 page_index = 2;
    int64 page_num = 3;
}
message GetUsersResp
{
    Status status = 1;
    repeated UserInfo users = 2;
    int64 page_index = 3;
    int64 page_num = 4;
    int64 total = 5;
}

// 批量增加用户
message AddUsersReq
{
    repeated UserInfo users = 1;
}
message AddUsersResp
{
    Status status = 1;
    repeated UserInfo succeed = 2;
    repeated UserInfo fail = 3;
}

// 批量修改用户
message UpdateUsersReq
{
    repeated UserInfo users = 1;  // 只需要填充id以及改变的field
}
message UpdateUsersResp
{
    Status status = 1;
    repeated UserInfo succeed = 2;
    repeated UserInfo fail = 3;
}

// 批量删除用户
message DelUsersReq
{
    repeated int64 users_id = 1; 
}
message DelUsersResp
{
    Status status = 1;
    repeated int64 succeed = 2;
    repeated int64 fail = 3;
}


// 获得做题记录
message GetSubmitRecordReq 
{
    int64 page_index = 1;
    int64 page_num = 2;
    int64 problem_id = 3;
    int64 user_id = 4;
}

message GetSubmitRecordResp 
{
    Status status = 1;
    repeated SubmitRecord submit_records = 2;  
    int64 page_index = 3;
    int64 page_num = 4;
    int64 total = 5;
}